--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -91,7 +91,8 @@
     </div>
   <% end %>
   <div class="to_top">
-    <%= link_to 'トップ画面へ', "/tops" %>
+    <%= link_to 'トップ画面へ', "/" %>
     <%= link_to "投稿一覧へ", feeds_path %>
+    <%= link_to "お気に入り一覧へ", favorite_index_users_path %>
   </div>
 <% end %>
