--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -419,3 +419,8 @@ h1 {
     top: 70px;
     text-align: center;
 }
+
+.contact_confirm {
+    text-align: center;
+    padding: 50px 0px 0px 0px;
+}
