--- a/app/views/contact_mailer/contact_mail.html.erb
+++ b/app/views/contact_mailer/contact_mail.html.erb
@@ -1,4 +1,1 @@
-  <h1>お問い合わせが完了しました！</h1>
-  <h4>name: <%= @contact.name %></h4>
-  <h4>お問い合わせ内容の確認</h4>
-  <p>content: <%= @contact.content %></p>
+  <h1>投稿の確認メールを送信しました！</h1>
