--- a/app/assets/stylesheets/feeds.scss
+++ b/app/assets/stylesheets/feeds.scss
@@ -341,7 +341,7 @@ img.feed_img{
 
 .title_edit {
     text-align: center;
-    padding: 20px 0px;
+    padding: 50px 0px;
 }
 
 .edit_to {
@@ -421,6 +421,11 @@ h1 {
 }
 
 .contact_confirm {
+    text-align: center;
+    padding: 50px 0px 0px 0px;
+}
+
+.confirm_title {
     text-align: center;
     padding: 50px 0px 0px 0px;
 }
