--- a/app/views/feeds/confirm.html.erb
+++ b/app/views/feeds/confirm.html.erb
@@ -1,12 +1,12 @@
-<h1 class="confirm_title">確認画面</h1>
-<%= form_with(model: @feed, url: feeds_path, local: true) do |form| %>
+<h1 class="confirm_title">以下の内容で投稿する</h1>
+<%= form_with(model: @feed, url: confirm_new_or_edit, method: confirm_form_method, local: true) do |form| %>
   <!-- 確認画面でアップロードした画像を表示させるための記述 -->
   <p class="confirmcontent">コメント:<%= @feed.content %></p>
   <div class="content">
     <%= form.hidden_field :content %>
   </div>
   <div class="feed_image">
-    <%= image_tag(@feed.image.url, class: 'feed_img'), if @feed.image && @feed.image.url %>
+    <%= image_tag(@feed.image.url, class: 'feed_img') if @feed.image && @feed.image.url %>
   </div>
   <div class="image_cache">
     <%= form.hidden_field :image_cache %>
